--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="draw.js"></script>
 </head> 
 <body>
-<button id="clear">clear</button><br>
+<button id="clear">clear button</button><br>
 <canvas id="main" width="300" height="300"></canvas>
 </body>
 </html>
