--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta name="viewport" content="user-scalable=no,initial-scale=1.0,maximum-scale=1.0" />
 
   <style>
-  body { padding:10px; margin:0px; background-color: #ccc; }
-  #main { margin: 10px auto 0px auto; }
+  /* body { padding:10px; margin:0px; background-color: #ccc; } */
+  /* #main { margin: 10px auto 0px auto; } */
   </style>
   
   <script src="draw.js"></script>
 </head> 
 <body>
 <button id="clear">clear button that will clear teh canvas</button><br>
-<canvas id="main" width="300" height="300"></canvas>
+<canvas id="main" width="800" height="800"></canvas>
 </body>
 </html>
