--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta name="viewport" content="user-scalable=no,initial-scale=1.0,maximum-scale=1.0" />
 
   <style>
-  /* body { padding:10px; margin:0px; background-color: #ccc; } */
-  /* #main { margin: 10px auto 0px auto; } */
+    html, body {margin:10px; touch-action: auto;}
+    #main {border: 1px solid #0000ff; touch-action: auto;}
   </style>
   
   <script src="draw.js"></script>
 </head> 
 <body>
-<button id="clear">clear button that will clear teh canvas</button><br>
-<canvas id="main" width="800" height="800"></canvas>
+  <button id="clear">clear button that will clear teh canvas</button><br>
+  <canvas id="main"></canvas>
 </body>
 </html>
