--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
   <style>
     .container {
       margin: 10px;
-    overflow: scroll;
-      }
-    #main {border: 1px solid #0000ff; overflow: scroll;}
+    }
+    #main {
+      border: 1px solid #0000ff;
+      width: 250px;
+      height:600px;
+      overflow-y: auto;
+    }
   </style>
   
   <script src="draw.js"></script>
