--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
 
   <style>
     .container {
-      margin: 10px;
+      overflow-y: auto;
     }
     #main {
       border: 1px solid #0000ff;
-      width: 250px;
-      height:600px;
-      overflow-y: auto;
+      width: 100%;
+      height: 100%;
     }
   </style>
   
@@ -20,7 +19,7 @@
 <body>
   <div class="container">
   <button id="clear">clear button that will clear teh canvas</button><br>
-  <canvas id="main" width="250" height="1000"></canvas>
+  <canvas id="main"></canvas>
 </div>
 </body>
 </html>
