--- a/index.html
+++ b/index.html
@@ -1,25 +1,21 @@
-<!DOCTYPE html> 
-<html> 
-<head> 
-  <meta name="viewport" content="user-scalable=no,initial-scale=1.0,maximum-scale=1.0" />
-
-  <style>
-    .container {
-      overflow-y: auto;
-    }
-    #main {
-      border: 1px solid #0000ff;
-      width: 100%;
-      height: 100%;
-    }
-  </style>
-  
-  <script src="draw.js"></script>
-</head> 
+<!DOCTYPE html>
+<html>
+<head>
+    <script src="draw.js"></script>
+    <style>
+        .container {
+            overflow-y  : visible;
+        }
+        #main {
+            margin-right: 30px;
+            border: 10px solid red;
+            overflow-x: hidden;
+        }
+    </style>
+</head>
 <body>
-  <div class="container">
-  <button id="clear">clear button that will clear teh canvas</button><br>
-  <canvas id="main"></canvas>
-</div>
+    <div class="container">
+    <canvas id="main"></canvas>
+    </div>
 </body>
 </html>
