--- a/index.html
+++ b/index.html
@@ -1,21 +1,37 @@
+
 <!DOCTYPE html>
 <html>
+
 <head>
-    <script src="draw.js"></script>
-    <style>
-        .container {
-            overflow-y  : visible;
-        }
-        #main {
-            margin-right: 30px;
-            border: 10px solid red;
-            overflow-x: hidden;
-        }
-    </style>
+    <title>touch drawing app</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0" />
+    <meta name="apple-mobile-web-capable" content="yes" />
+    <link rel="icon" sizes="196x196" href="nice-highres.png">
+    <link rel="stylesheet" href="css.css">
+    <link rel="apple-touch-icon" href="icon-iphone.png" />
 </head>
+
 <body>
-    <div class="container">
-    <canvas id="main"></canvas>
+
+
+    <canvas id="myCanvas" class="rahmen" ></canvas>
+    <script src="draw.js"></script>
+    <div class="button_menu">
+        <button onclick="blue_color()" class="buttonclass blue">b</button>
+        <button onclick="green_color()" class="buttonclass green">g</button>
+        <button onclick="red_color()" class="buttonclass red">r</button>
+
+        <button onclick="brushplus()" class="buttonclass">+</button>
+        <button onclick="brushminus()" class="buttonclass">-</button>
+        <button onclick="clearContent()" class="buttonclass">x</button>
+
+        <img id="scream" src="coke.png" width="400" height="400" style="display:none">
     </div>
+  
+  <input type="file" id="snap" accept="image/*;capture=camera" >
+        <button onclick="saveimagePNG()" class="">savePNG</button>
+        <button onclick="saveimageJPEG()" class="">saveJPEG</button>
+
 </body>
+
 </html>
