add earser button

--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
 
         <img id="scream" src="coke.png" width="400" height="400" style="display:none">
     </div>
+    <!-- <div id="toolbar" class="mobile open">
+        <div class="tool pencil active">
+            <img src="icons\pencil.svg" draggable="false">
+            <label>Draw</label>
+        </div>
+        <div class="tool eraser">
+            <img src="icons\earser.png" draggable="false">
+            <label>Eraser</label>
+        </div>
+    </div> -->
   
   <input type="file" id="snap" accept="image/*;capture=camera" >
         <button onclick="saveimagePNG()" class="">savePNG</button>
