change buttong color save asimage on phone

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="draw.js"></script>
     
     <!-- <input type="file" id="snap" accept="image/*;capture=camera" > -->
-    <button id="saveImage" onclick="saveImage()">save Image</button>
+    <button id="saveImage" onclick="saveImage()">Save Image to Phone</button>
     <!-- <image id="theimage"></image> -->
 </body>
 
