diable ios swipe left right page

--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
     <link rel="stylesheet" href="css.css">
     <script src="https://superal.github.io/canvas2image/canvas2image.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
+    <script src="//unpkg.com/prevent-pull-refresh"></script>
 </head>
 
 <body>
         <canvas id="myCanvas" ></canvas>
-    <script src="draw.js"></script>
-    
-    <!-- <input type="file" id="snap" accept="image/*;capture=camera" > -->
-    <button id="saveImage" onclick="saveImage()">Save Image to Phone</button>
-    <!-- <image id="theimage"></image> -->
+        <!-- <input type="file" id="snap" accept="image/*;capture=camera" > -->
+        <button id="saveImage" onclick="saveImage()">Save Image to Phone</button>
 </body>
+<script src="draw.js"></script>
 
 </html>
