change to jpeg from png cause can't see on phone

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src="https://superal.github.io/canvas2image/canvas2image.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
     <script src="//unpkg.com/prevent-pull-refresh"></script>
+    <meta name="viewport" content="user-scalable=no"/>
+
 </head>
 
 <body>
