add uplaod file button file

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
 <body>
         <canvas id="myCanvas" ></canvas>
-        <!-- <input type="file" id="snap" accept="image/*;capture=camera" > -->
+        <input type="file" id="snap" accept="image/*;capture=camera"><br><br>
         <button id="saveImage" onclick="saveImage()">Save .PNG Image to Phone</button><br><br>
         <button id="saveImage" onclick="saveImageDesktop()">Save .PNG Image for Desktop</button>
 </body>
