can't asd right click for earser

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     
 <body>
-        <canvas id="myCanvas"  ></canvas><br>
+        <canvas id="myCanvas" oncontextmenu="return false" ></canvas><br>
         <input type="file" id="snap" accept="image/*;capture=camera"><br><br>
         <button id="saveImage" onclick="saveImage()">Save .PNG Image to Phone</button><br><br>
         <button id="saveImage" onclick="saveImageDesktop()">Save .PNG Image for Desktop</button>
