--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
     
@@ -8,6 +7,7 @@
         <meta name="apple-mobile-web-capable" content="yes" />
         <link rel="icon" sizes="196x196" href="nice-highres.png">
         <link rel="stylesheet" href="css.css">
+        <link rel="icons" href="/icons">
         <script src="https://superal.github.io/canvas2image/canvas2image.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
         <script src="//unpkg.com/prevent-pull-refresh"></script>
@@ -20,6 +20,8 @@
         <input type="file" id="snap" accept="image/*;capture=camera"><br><br>
         <button id="saveImage" onclick="saveImage()">Save .PNG Image to Phone</button><br><br>
         <button id="saveImage" onclick="saveImageDesktop()">Save .PNG Image for Desktop</button>
+
+        <a class="gotopBtn" href="#"> <img src="icons/scrollTop.png" alt=""></a>
 </body>
 
 <script src="draw.js"></script>
