--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <script src="https://superal.github.io/canvas2image/canvas2image.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
         <script src="//unpkg.com/prevent-pull-refresh"></script>
+        <link rel="stylesheet" href="http://astronautweb.co/snippet/font-awesome/">
         <!-- <meta name="viewport" content="user-scalable=no"/> -->
         
     </head>
